--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>صفحة تتت</title>
+    <title>صفحة حححح</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -112,7 +112,7 @@
 
      function submitFeedback() {
     const phone = document.getElementById("phone").value;
-    const rating = document.getElementById("rating").value;
+    const rating = selectedRating; // لأن التقييم يتم تحديده باستخدام النجوم
     const suggestion = document.getElementById("suggestion").value;
     
     if (!phone || !rating) {
@@ -143,6 +143,30 @@
         alert("❌ حدث خطأ أثناء الإرسال. حاول مرة أخرى.");
     });
 }
+
+    
+  function fetchReviews() {
+    fetch('https://script.google.com/macros/s/AKfycbw_zieqLURglqmKG_a8ihJeEufSq11vCs7_W19Ie_ks6lpEAf3W2MacOmLGujbinkjhAQ/exec?action=getReviews')
+    .then(response => response.json())
+    .then(data => {
+        let tableBody = document.getElementById("reviewTableBody");
+        tableBody.innerHTML = ""; // مسح البيانات القديمة قبل التحديث
+        data.forEach(row => {
+            let tr = document.createElement("tr");
+            row.forEach(cell => {
+                let td = document.createElement("td");
+                td.textContent = cell;
+                tr.appendChild(td);
+            });
+            tableBody.appendChild(tr);
+        });
+    })
+    .catch(error => console.error("Error fetching reviews:", error));
+  }
+
+  // جلب التقييمات عند تحميل الصفحة
+  document.addEventListener("DOMContentLoaded", fetchReviews);
+
 
     </script>
   </body>
